--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Hwaa</string>
     <string name="not_connected_internet">Internet is not connected</string>
+    <string name="fab">dictionary fab\n</string>
 </resources>
