--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="streak">image of streak\n</string>
     <string name="notification">image of notification\n</string>
     <string name="rate">image of rate\n</string>
+    <string name="pronunciation">image for pronounciation\n</string>
+    <string name="stroke_order">image for stroke order</string>
+    <string name="back">ic_back\n</string>
+    <string name="more">ic_more\n</string>
+    <string name="iv_content">content of question\n</string>
 </resources>
