--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
     <string name="quick_revise">quick_review_button</string>
     <string name="number_of_cards">NUMBER OF CARDS</string>
     <string name="start">start</string>
+    <string name="email_empty">Email is empty</string>
+    <string name="password_empty">Password is empty</string>
+    <string name="password_not_match">Password not match</string>
+    <string name="confirm_password_empty">Confirm password is empty</string>
+    <string name="ok">ok</string>
+    <string name="error">error</string>
 </resources>
